--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,10 @@
                         <span class="navbar-text">Welcome, {{ g.user.first_name }} {{ g.user.last_name }}!</span>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        <form method="POST" action="{{ url_for('auth.logout') }}" style="display: inline;">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                            <button type="submit" class="nav-link btn btn-link p-0" style="border: none; background: none; color: inherit;">Logout</button>
+                        </form>
                     </li>
                 {% else %}
                     <li class="nav-item">
